monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4090/A4090e.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4090;

grammar A4090e extends de.monticore.common.TestLiterals{

  B = (who:["T1" | "T2"] | who:"Tom")*;

}
